# lab8

./: Cargo.toml
src/: figure.rs  main.rs  tests.rs
